Fixed webpage scaling on smaller screens

--- a/client/src/styles/zerodrive.css
+++ b/client/src/styles/zerodrive.css
@@ -21,7 +21,7 @@
 }
 
 .zd-hero-banner {
-    height: 400px;
+    height: 360px;
 }
 
 .zd-use-font {
@@ -42,7 +42,7 @@
     font-size: 60px;
     font-weight: 700;
     color: white;
-    margin-top: 60px;
+    margin-top: 30px;
     margin-right: 200px;
     line-height: 70px
 }
